# getopt-long

./: Cargo.toml  README.md  build.rs
doc/: readme.md
examples/ex1/: main.rs
examples/ex2/: main.rs
src/: getopt_long.rs  getopt_long2.rs  lib.rs  spot_error.rs
src/glibc/: getopt.c  getopt.h  getopt_int.h
src/my_glibc/: getopt.c  mod.rs
