[package]
name = "getopt-long"
version = "0.1.0"
authors = ["automan.yang <automanyang@gmail.com>"]
description = "Just as getopt_long in glibc. Dependence is nothing."
repository = "https://github.com/automanyang/servant"
readme = "README.md"
keywords = ["getopt"]
categories = ["utilities"]
license = "MIT"
edition = "2018"

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
# test-case = "^1.0.0"


# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"

# [target.i686-pc-windows-gnu]
# linker = "i686-w64-mingw32-gcc"